yaml/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-plenus
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-plenus
